# tapesort

./: .gitignore  CMakeLists.txt  PROBLEM.org  README.org
cmake/: FindLyra.cmake  Findtomlplusplus.cmake
example/: conf.toml
include/sort/: Config.hpp  ExternalSort.hpp
include/tape/: Config.hpp  FileTape.hpp  ITape.hpp
src/: filetape.cpp  main.cpp
src/sort/: ExternalSort.cpp
src/tape/: FileTape.cpp  ITape.cpp
